<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_edit"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:scrollHorizontally="true"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_edit"
                android:hint="@string/last_name"
                android:scrollHorizontally="true"
                android:inputType="textPersonName"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dob_edit"
                android:hint="@string/dob"
                android:inputType="date"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_container">

            <android.support.v7.widget.AppCompatButton
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/add_number"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_add_circle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/number_edit_container">
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emails_container"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/add_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_add_circle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/email_edit_container">

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addresses_container"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/add_address"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_add_circle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/address_edit_container">

            </LinearLayout>

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_error"
            tools:text="Number too short"
            android:textColor="@color/colorAccent"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_contact_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@android:drawable/checkbox_on_background" />
    </LinearLayout>
</ScrollView>